# kob-character-sheets

./: Cargo.toml  README.md  index.html
.github/workflows/: gh-pages-deploy.yml
src/: main.rs
src/components/: attribute_display.rs  attribute_selector.rs  mod.rs  notebook.rs  sheet_settings.rs
src/types/: attribute.rs  character_data.rs  character_state.rs  dice.rs  mod.rs  roll_result.rs
